@@ -24,6 +24,7 @@
  * Removed deprecated Field::getSample method
  * Removed deprecated SobolIndicesAlgorithm::Generate method
  * Removed deprecated NumericalScalar, NumericalComplex types
+ * Removed deprecated Function constructors
 
 === Python module ===
 
